# exercises

./: README.md
.github/workflows/: main.yml  project2.yml  project8.yml
projects/Project1/: Project1.sln  Project1.vcxproj  main.cpp
projects/Project1-android/: Project1-android.androidproj  Project1-android.sln
projects/Project1-android/app/: build.gradle.template
projects/Project1-android/app/src/main/: AndroidManifest.xml.template
projects/Project1-android/app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp
projects/Project1/Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  main.obj.enc  vc143.idb
projects/Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
projects/Project1/Project1/x64/Release/: Project1.exe.recipe  Project1.iobj  Project1.ipdb
projects/Project1/Project1/x64/Release/Project1.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
projects/project1/: CMakeLists.txt
projects/project1-android/app/: build.gradle.template
projects/project1-android/app/src/main/: AndroidManifest.xml.template
projects/project2/: CMakeLists.txt
projects/project2/src/main/: main.cpp  main.h
projects/project8/: CMakeLists.txt
projects/project8/src/main/: cmake.cpp  compiler.cpp  help.cpp  include.h  main.cpp  wrapper.cpp
(+8 files in other folders)
